# TG_BOT_DRUM_FAMILY

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  claude-progress.md  clean-state-checklist.md  docker-compose.yml  evaluator-rubric.md  feature_list.json  init.sh  pyproject.toml  quality-document.md  session-handoff.md
.githooks/: pre-commit
assets/: README.md  build.sh
botfather/: botfather-setup.md
evidence/: booking-individual-003.md  brand-ui-008.md  my-bookings-004.md  profile-005.md  registration-002.md  setup-000.md  yclients-001.md
src/: config.py  main.py
src/bot/: assets.py  faq_data.py  reminders.py  texts.py  utils.py
src/bot/handlers/: booking.py  commands.py  faq.py  feedback.py  menu_stub.py  my_bookings.py  profile.py  registration.py  start.py  static_info.py
src/bot/keyboards/: booking.py  bookings.py  contact.py  contacts.py  faq.py  feedback.py  main_menu.py
src/bot/middlewares/: deps.py
src/bot/states/: booking.py  registration.py
src/db/: models.py  session.py
src/services/: user_service.py
src/yclients/: client.py  exceptions.py  models.py  smoke_test.py
tests/: conftest.py  test_assets.py  test_db.py  test_deps_middleware.py  test_faq.py  test_feedback.py  test_handlers.py  test_reminders.py  test_smoke.py  test_user_service.py  test_yclients_client.py
