[project]
name = "drum-school-bot"
version = "0.1.0"
description = "Telegram-бот для школы барабанов поверх YClients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "ruff>=0.4.0",
]

# Это приложение, а не библиотека — uv не пытается собрать пакет.
# Подробнее: https://docs.astral.sh/uv/concepts/projects/config/#project-packaging
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E,W — pycodestyle; F — pyflakes; I — isort; UP — pyupgrade
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Добавляем корень проекта в sys.path, чтобы тесты могли `import src.*`
# (uv не устанавливает приложение как пакет — см. `[tool.uv] package = false`)
pythonpath = ["."]
